:zap: Update:   - Add Point display

--- a/templates/client/product.html
+++ b/templates/client/product.html
@@ -78,7 +78,7 @@
                                 </ul>
                             </div>
                             <div class="product_meta">
-                                <span>{% trans "Category" %}: <a href="#">{{ product.category.name }}</a></span>
+                                <span>{% trans "积分" %}: {{ product.variant.point }}</span>
                             </div>
 
                         </form>
