:zap: Update:   - Add shipment display

--- a/templates/client/order.html
+++ b/templates/client/order.html
@@ -119,8 +119,7 @@
                                     </div>
                                     <div class="cart_subtotal">
                                         <p>{% trans "追踪单号" %}</p>
-                                        <p class="cart_amount"><a href="{{ order.shipment.tracking_url }}">
-                                            {{ order.shipment.tracking_number }}</a></p>
+                                        <p class="cart_amount">{{ order.shipment.tracking_number }}</p>
                                     </div>
                                 </div>
                             </div>
